# JsonEditor

./: CMakeLists.txt  CMakeLists.txt.user.9461ac6.22  additionalfields.cpp  additionalfields.h  controlpanel.cpp  controlpanel.h  customenumslistmodel.cpp  customenumslistmodel.h  devicelistmodel.cpp  devicelistmodel.h  main.cpp  valuemaps.h  valueobject.cpp  valueobject.h  valueparser.cpp  valueparser.h  valueslistmodel.cpp  valueslistmodel.h
ValueModels/: valuemaps.h  valueobject.cpp  valueobject.h  valueslistmodel.cpp
qrc/: main.qml  qml.qrc
qrc/ControlElements/: ElementDelegate.qml
qrc/MainElements/: DevicePage.qml  EnumPage.qml  MainHeader.qml  MainPage.qml
qrc/Popups/: NewDevicePopup.qml  NewEnumPopup.qml  OpenFilePopup.qml  SavePopup.qml  TurnOffPopup.qml
qrc/_json/: test.json  test1.json  test2.json
